# Mini-Server

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  README_EN.md
.github/: copilot-instructions.md
scripts/: build_mac.sh  build_win.bat
server/core/: request_router.hpp  server.hpp  service_registry.cpp  service_registry.hpp
server/net/: http_types.cpp  http_types.hpp  socket_server.hpp
source/client/: CMakeLists.txt
source/server/: CMakeLists.txt  main.cpp
source/server/core/: request_router.cpp  request_router.hpp  server.cpp  server.hpp  service_registry.cpp  service_registry.hpp  static_file_handler.cpp  static_file_handler.hpp
source/server/net/: http_parser.cpp  http_parser.hpp  http_types.cpp  socket_server.cpp
source/server/utils/: logger.cpp  logger.hpp
test_client/: CMakeLists.txt  README.md  build.sh  build_and_run.bat  run_tests.bat  run_tests.sh  test_client.cpp
